Matching game tab: Fixed buggy outline for circles
Matching game tab: Made outline stroke thicker than slice stroke
Matching game tab: Converted PiesSetNode to Pattern
Matching game tab: Converted VerticalBarsNode to Pattern
Matching game tab: Converted HorizontalBarsNode to Pattern
Matching game tab: Fixed: The "diagonal interleaving L shape" is too bit big on the lower levels when there are 6 L's (level 2)
Matching game tab: Animate the bars 2x as fast
# 0.00.69 (64421) May 29, 2012
Equality lab tab: Improved control panel location
# 0.00.68 (64419) May 29, 2012
Equality lab tab: Changed from text radio buttons to icon radio button strip
# 0.00.67 (64410) May 29, 2012
Equality lab tab: Make representation control panel a little bigger to use up space freed up from reducing right hand side representations.
Equality lab tab: Wired up "same as left" representation vs "number line" buttons
Equality lab tab: Made representations different colors and added radio buttons
Switched to language level 5.0
Build a fraction: Changed background to white
# 0.00.66 (64062) May 9, 2012
Build a fraction: Hide the denominator dotted line when the user is dragging 0
Build a fraction: Prevent putting 0 in denominator, prevent putting a number in numerator or denominator if already filled
Build a fraction: Disable number pickability when on a fraction, so mouse clicks will fall through to the fraction itself
Build a fraction: Fixed: Numbers should move when dragging a fraction
Build a fraction: i18n
Build a fraction: Fixed: draggable numbers don't attach to fraction directly from tool dragging
Build a fraction: Make draggable numbers bigger, make draggable fraction bigger, center drag area on draggable fraction
Build a fraction: Increased container size and removed stroke from pieces so they don't look like they are already in a container
Build a fraction: Centered the drag area on the draggable fraction
Build a fraction: Made the background cream
Added draggable fractions